--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="../static/stylesheet.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chemist Connect</title>
+    <title>Chemist Connect Online Store</title>
 </head>
 <body>
     <div class="top-division">
-
+        <a href="homepage.html">
+            <img src="../static/images/logo_landscape.png" alt="Logo" class="corner-image">
+        </a>
+        <div class="auth-button">
+            <a href="#">Login</a>
+        </div>
     </div>
 </body>
+</html>
