removed the buttons and fixed logo in nav bar

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="{{ url_for('homepage' )}}">
-        <img src="{{ url_for('static', filename='images/logo_landscape.png')}} alt="Logo" class="corner-image">
+        <img src="{{ url_for('static', filename='images/logo_landscape.png')}}" alt="Logo" class="corner-image">
         </a>
         <div class="search-bar">
             <input type="text" placeholder="Search the catalogue...">
