--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -78,6 +78,15 @@
             showSlide(nextSlide);
         }, 5000);
     </script>
-
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="#">Return Policies</a>
+            <a href="#">About Us</a>
+            <a href="#">Store Locations</a>
+            <a href="#">Help & Support</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
+    </footer>
 </body>
 </html>
