--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -33,25 +33,37 @@ header a {
     margin: 0 20px;
 }
 
-.search-bar input {
+.search-bar form {
+    display: flex;
     width: 100%;
     max-width: 500px;
-    padding: 10px;
+}
+
+.search-bar input {
+    flex-grow: 1;
+    padding: 10px 15px;
     font-size: 16px;
-    border-radius: 20px;
+    border-radius: 20px 0 0 20px; 
     border: 1px solid #ccc;
     outline: none;
+    border-right: none; 
 }
 
 .search-button {
     background-color: #FFA500;
-    border: none;
-    border-radius: 50%;
-    padding: 10px;
+    border: 1px solid #ccc;
+    border-left: none; 
+    border-radius: 0 20px 20px 0; 
+    padding: 10px 15px;
     cursor: pointer;
-    margin-left: 5px;
     font-size: 18px;
+    transition: background-color 0.3s;
 }
+
+.search-button:hover {
+    background-color: #ff8c00; /* Darker orange on hover */
+}
+
 
 .header-icons {
     display: flex;
