--- a/templates/cartpage.html
+++ b/templates/cartpage.html
@@ -12,8 +12,11 @@
         <img src="{{ url_for('static', filename='images/logo_landscape.png')}}" alt="Logo" class="corner-image">
         </a>
         <div class="search-bar">
-            <input type="text" placeholder="Search the catalogue...">
-        </div>
+            <form action="{{ url_for('search') }}" method="GET">
+                <input type="text" name="query" placeholder="Search the catalogue...">
+                <button type="submit" class="search-button">🔍</button>
+            </form>
+        </div>        
         <div class="header-icons">
             <a href="{{ url_for('view_cart')}}"><img src="{{ url_for('static',filename='images/cart.png')}}" alt="Cart" class="icon"></a>
             <a href="#"><img src="{{ url_for('static',filename='images/profile.png')}}" alt="Profile" class="icon"></a>
