--- a/templates/productpage.html
+++ b/templates/productpage.html
@@ -12,7 +12,10 @@
         <img src="{{ url_for('static', filename='images/logo_landscape.png')}}" alt="Logo" class="corner-image">
         </a>
         <div class="search-bar">
-            <input type="text" placeholder="Search the catalogue...">
+            <form action="{{ url_for('search') }}" method="GET">
+                <input type="text" name="query" placeholder="Search the catalogue...">
+                <button type="submit" class="search-button">🔍</button>
+            </form>
         </div>
         <div class="header-icons">
             <a href="{{ url_for('view_cart')}}"><img src="{{ url_for('static',filename='images/cart.png')}}" alt="Cart" class="icon"></a>
