Added new pages

--- a/templates/productpage.html
+++ b/templates/productpage.html
@@ -78,7 +78,7 @@
 
     <footer class="site-footer">
         <div class="footer-links">
-            <a href="#">Return Policies</a>
+            <a href="{{ url_for('returns')}}">Return Policies</a>
             <a href="#">About Us</a>
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
