--- a/templates/returnspolicypage.html
+++ b/templates/returnspolicypage.html
@@ -35,10 +35,20 @@
 
     <h1>Returns and Refunds Policy</h1>
     <p>We do not offer any returns unless the product is faulty or expired. Instead, we offer exchanges for any over the counter items within our store. Prescriptions are non-refundable.</p>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu malesuada magna. Aliquam in porttitor elit. Donec pellentesque tortor eros, vitae convallis leo pretium id. Integer ut mauris ac mauris bibendum congue ac non nibh. Vestibulum quis commodo velit. Integer id porttitor risus. Sed venenatis mauris nec faucibus malesuada. Phasellus sit amet orci eleifend, elementum eros eget, auctor odio. Vivamus non feugiat lacus, sit amet facilisis lectus.
+<br>
+Vivamus nec placerat odio. Fusce hendrerit dapibus congue. Proin et fringilla libero. Praesent tristique tempor purus, ac euismod libero tincidunt ac. Vestibulum mauris arcu, fringilla consectetur luctus quis, porta non odio. Vestibulum viverra lobortis nulla, sed pulvinar sem pulvinar et. Curabitur eget pellentesque lacus. Vivamus massa nibh, viverra ut tempor et, tincidunt non neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam tempor elit at ante iaculis, luctus volutpat ante facilisis. Quisque ac ullamcorper felis. Maecenas facilisis dapibus sodales.
+<br>
+In eget sodales mi. Pellentesque eget condimentum nisi. Etiam quis nunc at libero auctor efficitur vel at ante. Mauris consectetur, massa et pharetra convallis, leo dui consequat est, non vulputate eros ligula eget justo. Nunc imperdiet mi id nulla iaculis, ac molestie felis auctor. Morbi iaculis, risus in aliquam dignissim, libero tortor mollis lacus, nec vestibulum metus lacus id ex. Aenean consequat, mi sed placerat convallis, ante lorem tempus mi, non scelerisque sapien neque sed nulla. Phasellus blandit, libero a scelerisque ullamcorper, urna leo consectetur odio, ut laoreet nisl lorem ut nisi.
+<br>
+Nam laoreet felis placerat nisl pulvinar bibendum. Mauris suscipit condimentum massa, vel malesuada ante dictum et. Nam consequat vehicula suscipit. Sed iaculis lacinia tortor, non venenatis nunc vestibulum eu. Duis venenatis lacus ac nibh iaculis, et mattis dui porttitor. Etiam ac iaculis leo, non vulputate magna. Sed ante ipsum, viverra nec libero at, volutpat porttitor lectus. Morbi quis tincidunt orci, vitae laoreet eros. Duis id metus cursus, rutrum metus id, semper sem. Maecenas accumsan fringilla blandit. Nunc hendrerit justo libero, non molestie quam tristique ut. Sed vel eros eu augue convallis facilisis.
+<br>
+<br>
+Sed hendrerit eget neque et hendrerit. Mauris interdum dui eget velit pellentesque consectetur. Donec pharetra laoreet enim, non imperdiet lacus dictum in. Etiam scelerisque eget nisi quis lacinia. Sed interdum ac eros id euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Quisque arcu tellus, porttitor at magna eget, pulvinar dignissim ante. Morbi mollis risus a turpis posuere gravida. Vivamus a finibus ipsum, eget elementum risus. Donec sed bibendum lectus. Maecenas tempus euismod augue, sit amet fringilla eros. Morbi quis sagittis velit.</p>
+<br>
        <footer class="site-footer">
         <div class="footer-links">
-            <a href="#">Return Policies</a>
+            <a href="{{ url_for('returns')}}">Return Policies</a>
             <a href="#">About Us</a>
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
