--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -87,7 +87,7 @@
             <a href="#">About Us</a>
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
-            <a href="#">Contact Us</a>
+            <a href="{{ url_for('contactus')}}">Contact Us</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
