added an admin login

--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -43,5 +43,16 @@
         </form>
         <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
     </div>
+            <footer class="site-footer">
+        <div class="footer-links">
+            <a href="#">Return Policies</a>
+            <a href="#">About Us</a>
+            <a href="#">Store Locations</a>
+            <a href="#">Help & Support</a>
+            <a href="#">Contact Us</a>
+            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
+        </div>
+        <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
+    </footer>
 </body>
 </html>
