--- a/templates/categorypage.html
+++ b/templates/categorypage.html
@@ -32,14 +32,17 @@
         <a href="#">Skincare</a>
         <a href="#">Our services</a>
     </nav>
+
     
+
        <footer class="site-footer">
         <div class="footer-links">
             <a href="{{ url_for('returns')}}">Return Policies</a>
             <a href="#">About Us</a>
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
-            <a href="#">Contact Us</a>
+            <a href="{{ url_for('contactus')}}">Contact Us</a>
+            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
