--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -88,6 +88,8 @@
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
             <a href="{{ url_for('contactus')}}">Contact Us</a>
+            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
+            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
