--- a/templates/productpage.html
+++ b/templates/productpage.html
@@ -82,7 +82,8 @@
             <a href="#">About Us</a>
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
-            <a href="#">Contact Us</a>
+            <a href="{{ url_for('contactus')}}">Contact Us</a>
+            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
