--- a/templates/returnspolicypage.html
+++ b/templates/returnspolicypage.html
@@ -53,6 +53,7 @@ Sed hendrerit eget neque et hendrerit. Mauris interdum dui eget velit pellentesq
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
             <a href="#">Contact Us</a>
+            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
