--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -60,6 +60,7 @@
             <a href="#">Store Locations</a>
             <a href="#">Help & Support</a>
             <a href="#">Contact Us</a>
+            <a href="{{ url_for('adminlogin')}}">Admin Login</a>
         </div>
         <p class="footer-text">© 2025 Chemist Connect. All rights reserved.</p>
     </footer>
