did backend for categories page

--- a/templates/categorypage.html
+++ b/templates/categorypage.html
@@ -33,7 +33,23 @@
         <a href="#">Our services</a>
     </nav>
 
-    
+    <h1>{{ category }}</h1>
+
+    {% if empty %}
+        <p>No products found in this category</p>
+    {% else %}
+        <div class="product-grid">
+            {% for product in products %}
+            <div class="="product-card>
+                <a href="{{ url_for('product_detail', product_id=product['id']) }}">
+                <img src="{{ url_for('static',filename='product_images/'~ product['image'])}}" alt="{{ product['product']}}">
+                <h3>{{ product['product']}}</h3>
+                <p>Price: ${{ product['price'] }}</p>
+                </a>
+            </div>
+            {% endfor %}
+        </div>
+    {% endif %}
 
        <footer class="site-footer">
         <div class="footer-links">
