--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,7 +25,7 @@
 
     <nav class="category-nav">
         <a href="#">Incontinence</a>
-        <a href="#">Baby Care</a>
+        <a href="{{ url_for('category_page', category_name='Baby Products')}}">Baby Care</a>
         <a href="#">Beauty</a>
         <a href="#">Medicine</a>
         <a href="#">Supplements</a>
