--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -37,7 +37,7 @@
         <h2>Login</h2>
         {% if error %}<p class="error">{{ error }}</p>{% endif %}
         <form method="post">
-            <input type="text" name="username" placeholder="Username" required>
+            <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
