added a checkout page

--- a/templates/profilepage.html
+++ b/templates/profilepage.html
@@ -35,6 +35,10 @@
 
     <h1>Welcome, {{ user['first_name']|capitalize }}!</h1>
 
+    <!-- allow users to upload escripts -->
+    <!-- view orders -->
+    <!-- update personal information, for easy filling out when adding to order -->
+
             <footer class="site-footer">
         <div class="footer-links">
             <a href="#">Return Policies</a>
