Fixed up inconsistencies

--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -27,4 +27,10 @@
         <a href="#">Analytics</a>
     </div>
 
+    <script>
+  window.addEventListener("beforeunload", function () {
+    navigator.sendBeacon("/adminlogout");
+  });
+</script>
 </body>
+</html>
