--- a/templates/cartpage.html
+++ b/templates/cartpage.html
@@ -65,15 +65,15 @@
             <input type="email" name="guest_email" id="guest_email" required>
         </div>
         {% endif %}
-        <div class="form-group">
-            <label for="pickup_location">Select Pickup Location</label>
-            <select name="pickup_location" id="pickup_location" required>
-                <option value="">Choose a location</option>
-                <option value="Sydney CBD">Fairfield</option>
-                <option value="Parramatta">Pendle Hill</option>
-                <option value="Chatswood">Prospect</option>
-            </select>
-        </div>
+    <div class="form-group">
+        <label for="pickup_location">Select Pickup Location</label>
+        <select name="pickup_location" id="pickup_location" required>
+            <option value="">Choose a location</option>
+            <option value="Fairfield West">Fairfield West</option>
+            <option value="Pendle Hill">Pendle Hill</option>
+            <option value="Prospect">Prospect</option>
+        </select>
+    </div>
         <button type="submit" class="checkout-button">Proceed to Checkout</button>
     </form>
 
