--- a/templates/categorypage.html
+++ b/templates/categorypage.html
@@ -40,9 +40,9 @@
     {% else %}
         <div class="product-grid">
             {% for product in products %}
-            <div class="="product-card>
+            <div class="product-card">
                 <a href="{{ url_for('product_detail', product_id=product['id']) }}">
-                <img src="{{ url_for('static',filename='product_images/'~ product['Image'])}}" alt="{{ product['product']}}">
+                <img src="{{ url_for('static',filename='images/product_images/'~ product['image'])}}" alt="{{ product['product']}}">
                 <h3>{{ product['product']}}</h3>
                 <p>Price: ${{ product['price'] }}</p>
                 </a>
