--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -15,7 +15,7 @@
     <div class="sidebar">
         <a href="#">Dashboard</a>
         <a href="{{ url_for('view_all_orders')}}">View Orders</a>
-        <a href="#">Edit Products</a>
+        <a href="{{ url_for('admin_products') }}">Manage Products</a>
         <a href="#">Team Management</a>
         <a href="#">Analytics</a>
         <a href="#">Log Out</a>
