added an 'add admin' feature

--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -16,7 +16,7 @@
         <a href="#">Dashboard</a>
         <a href="{{ url_for('view_all_orders')}}">View Orders</a>
         <a href="{{ url_for('admin_products') }}">Manage Products</a>
-        <a href="#">Team Management</a>
+        <a href="{{ url_for('add_admin')}}">Team Management</a>
         <a href="#">Analytics</a>
         <a href="#">Log Out</a>
     </div>
